syntax= "proto3";

message Cashflow {
    double int_amt= 1;
    double prin_amt= 2;
    int64 date= 3;
}

message AccountWithCashflows{
    string entity= 1;
    string trade_id= 2;
    int64 contract_id= 3;
    string folder= 4;
    string trading_banking= 5;
    string intrnl_extrnl= 6;
    string cntr_prty_name= 7;
    int64 trade_dt= 8;
    int64 st_dt= 9;
    int64 ed_dt= 10;
    string deal_ccy= 11;
    double org_notional= 12;
    double org_notional_inr= 13;
    double rec_crnt_notional= 14;
    double rec_crnt_notional_inr= 15;
    double pay_crnt_notional= 16;
    double pay_crnt_notional_inr= 17;
    double contignent_notional= 18;
    string deal_side= 19;
    string pay_leg_idx= 20;
    double pay_int_rt= 21;
    double spread_pay_leg= 22;
    string rec_leg_idx= 23;
    double rec_int_rt= 24;
    double spread_rec_leg= 25;
    double pay_side_acrl= 26;
    double pay_side_mtm= 27;
    double pay_side_gmtm= 28;
    double rec_side_acrl= 29;
    double net_acrl_inr= 30;
    double net_acrl_usd= 31;
    string future_cash_proceeds_ccy= 32;
    double future_cash_proceeds= 33;
    double future_cash_proceeds_inr= 34;
    double net_mtm= 35;
    double net_mtm_inr= 36;
    double net_mtm_usd= 37;
    double net_gmtm_inr= 38;
    double net_gmtm_usd= 39;
    double net_bcva_adjstd_gmtm_inr= 40;
    double pay_side_pv01_inr= 41;
    double rec_side_pv01_inr= 42;
    double net_pv01_inr= 43;
    double pay_side_modified_duration= 44;
    double exchange_rt= 45;
    int64 pay_reset_dt= 46;
    int64 rec_reset_dt= 47;
    int64 pay_payment_dt= 48;
    int64 rec_payment_dt= 49;
    string org_tenor= 50;
    string residual_tenor= 51;
    string pay_reset_freq= 52;
    string rec_reset_freq= 53;
    string pay_payment_freq= 54;
    string rec_payment_freq= 55;
    string deal_status= 56;
    string inp_id= 57;
    string auth_id= 58;
    string trad_bank= 59;
    string m_bank_b= 60;
    string flowtype= 61;
    string flowtype1= 62;
    string flowtype2= 63;
    string flowtype3= 64;
    string flowtype4= 65;
    double flow_amt= 66;
    int64 cf_dt= 67;
    string flow_ccy= 68;
    double hkd_rt= 69;
    double hkd_amt= 70;
    int64 m_h_rep_dt2= 71;
    double inr_amt= 72;
    double inr_rt= 73;
    double int_rt= 74;
    string cntrct_usage= 75;
    string non_idx_flw_curr= 76;
    double non_idx_cf_amt= 77;
    int64 indexation_dt= 78;
    double tot_int_amt= 79;
    double tot_prin_amt= 80;
    repeated Cashflow cashflows= 81;
}
