syntax = "proto3";

message Cashflow {
     double int_amt = 1;
     double prin_amt = 2;
     int64 date = 3;
}

message AccountWithCashflows{
     string deal_no = 1;
     string short_name = 2;
     int64 nxt_rep_dt = 3;
     int64 call_dt = 4;
     int64 put_dt = 5;
     int64 deal_dt = 6;
     string portfolio = 7;
     double deal_rt = 8;
     int64 org_face_val = 9;
     int64 os_face_val = 10;
     double org_cst_val = 11;
     double acrd_int = 12;
     double book_yield = 13;
     int64 int_basis = 14;
     double avg_os_vd = 15;
     double avg_os_dd = 16;
     double prin_amt = 17;
     double org_bal = 18;
     double coup_rt = 19;
     int64 nxt_coup_dt = 20;
     int64 gl = 21;
     int64 cf_dt = 22;
     string secu_desc = 23;
     string prod_desc = 24;
     string prod_cd = 25;
     int64 lst_coup_dt = 26;
     int64 call_dt1 = 27;
     string coup_freq = 28;
     int64 val_dt = 29;
     string acrl_freq = 30;
     int64 lst_rep_dt = 31;
     int64 lst_put_dt = 32;
     string inst = 33;
     int64 org_term = 34;
     string acrl_basis = 35;
     string div = 36;
     string alm_line = 37;
     string ia_line = 38;
     int64 cmpnd_freq = 39;
     int64 nxt_cmpnd_dt = 40;
     int64 rt_chng_freq = 41;
     string rt_flg = 42;
     string rep_idx = 43;
     int64 nxt_pay_dt = 44;
     int64 prev_rep_dt = 45;
     int64 int_pay_freq = 46;
     double int_rt = 47;
     string port_typ = 48;
     string sec_grp = 49;
     string sec_type = 50;
     string sec_issuer = 51;
     string sec_guaranteed = 52;
     string mrkt = 53;
     string idx_label = 54;
     string bd_categ = 55;
     string bd_type = 56;
     string listed = 57;
     string npa_class = 58;
     string entity = 59;
     string desk = 60;
     string acc_sec_igaap = 61;
     double os_cv_before_amort = 62;
     double os_cv_after_amort = 63;
     int64 mat_dt = 64;
     double int_amt = 65;
     string flow_type = 66;
     string isin = 67;
     int64 org_tenor = 68;
     int64 rep_tenor = 69;
     int64 ftp_mat_dt = 70;
     double wap_igaap = 71;
     double ost_bal = 72;
     string contract_no = 73;
     string instr_id = 74;
     string parent_code = 75;
     string issuer_name = 76;
     string rating = 77;
     string tax_status = 78;
     string slr_nslr = 79;
     double deal_ytm = 80;
     string intr_app_freq = 81;
     string comp_freq = 82;
     string intr_prac = 83;
     string rate_spread = 84;
     string asset_class = 85;
     string intr_typ = 86;
     int64 sec_issuance_date = 87;
     string coupon = 88;
     int64 last_intr_date = 89;
     int64 next_intr_date = 90;
     double amort_till_date = 91;
     int64 ftp_lst_repr_dt = 92;
     int64 ftp_nxt_repr_dt = 93;
     double tot_int_amt = 94;
     double tot_prin_amt = 95;
     repeated Cashflow cashflows = 96;
}
